fix: Change the way to parse to list after a stream